--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -71,6 +71,13 @@
           <select id="weekSel"></select>
         </div>
 
+        <div class="team-selector">
+          <span class="team-label">Viewing as:</span>
+          <select id="weeklyTeamSel" class="team-select">
+            <option value="">Loading teams...</option>
+          </select>
+        </div>
+
         <label class="checkbox-container">
           <input type="checkbox" id="showRanks" checked>
           Show team ranks per category
@@ -107,6 +114,13 @@
           <select id="viewSel">
             <option value="tot" selected>Totals</option>
             <option value="avg">Averages</option>
+          </select>
+        </div>
+
+        <div class="team-selector">
+          <span class="team-label">Viewing as:</span>
+          <select id="compareTeamSel" class="team-select">
+            <option value="">Loading teams...</option>
           </select>
         </div>
 
