split out login select css as reduce size of main css

--- a/templates/select.html
+++ b/templates/select.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Select Fantasy League</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">  <title>Select Fantasy League</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='login_select.css') }}">
 </head>
 <body>
   <div class="container login-container">
