--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ibby's Fantasy Basketball App - Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">  <title>Ibby's Fantasy Basketball App - Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='login_select.css') }}">
   <!-- Add Font Awesome for basketball icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
